# sentric

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: bench_collector.py
roadmap/active/: 01-version-and-metadata.md  02-collector-enhancements.md  03-async-trace.md  06-streaming-support.md
roadmap/done/: 05-readme-overhaul.md  08-otel-integration.md  10-trajectory-viewer-cli.md
roadmap/planned/: 04-loader.md  07-cost-tracking.md  09-format-importers.md  11-performance-optimizations.md  12-swebench-poc-modal.md  13-custom-agent-harness.md  14-trajectory-analysis-report.md
sentric/: __init__.py  _json.py  cli.py  collector.py  loader.py  otel.py  parsers.py  pricing.py  streams.py  trace.py
sentric/importers/: __init__.py  _batch.py  langsmith.py  openai_messages.py  wandb.py
tests/: mock_responses.py  test_atrace.py  test_cli.py  test_collector.py  test_importers.py  test_loader.py  test_otel.py  test_performance.py  test_streams.py  test_trace.py
