[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentric"
version = "0.2.0"
description = "Open-source trajectory logging for LLM agents. Two lines of code to structured, replayable records of every agent run."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Sentric Labs"},
]
keywords = ["llm", "agents", "trajectory", "logging", "reinforcement-learning", "fine-tuning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
otel = ["opentelemetry-api>=1.20"]
fast = ["orjson>=3.9"]
all = ["openai>=1.0", "anthropic>=0.20", "opentelemetry-api>=1.20", "orjson>=3.9"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/sentriclabs/sentric"
Issues = "https://github.com/sentriclabs/sentric/issues"

[tool.setuptools.packages.find]
include = ["sentric*"]
